welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:33: error: ';' expected but ')' found.
  T(getMondeHauteur()-1) = getCouleurSol())
                                          ^